removed holdover test.ipynb that isn't useful

--- a/DebuggingEfforts.ipynb
+++ b/DebuggingEfforts.ipynb
@@ -1729,7 +1729,9 @@
     }
    ],
    "source": [
-    "%run refactor_Torsion_Strain.py -i example.mol2 -o mol2.csv "
+    "%run refactor_Torsion_Strain.py -i example.mol2 -o mol2.csv \n",
+    "#NOTE: I do not allow the user to overwrite file names, this won't run unless you change \"mol2.csv\"\n",
+    "#I use mol2.csv in the analysis so if you want to test my code, just pick a different name "
    ]
   },
   {
@@ -1747,7 +1749,9 @@
     }
    ],
    "source": [
-    "%run refactor_Torsion_Strain.py -i output.sdf -o sdf.csv "
+    "%run refactor_Torsion_Strain.py -i output.sdf -o sdf.csv \n",
+    "#NOTE: I do not allow the user to overwrite file names, this won't run unless you change \"sdf.csv\"\n",
+    "#I use sdf.csv in the analysis so if you want to test my code, just pick a different name"
    ]
   },
   {
