--- a/DebuggingEfforts.ipynb
+++ b/DebuggingEfforts.ipynb
@@ -2926,7 +2926,8 @@
     "    # Round the DataFrame to the 8th decimal place\n",
     "    df_rounded = df.round(8)\n",
     "\n",
-    "    # Select the first two columns of df_rounded\n",
+    "    # Select the first two columns \n",
+    "    # of df_rounded\n",
     "    first_two_columns = df_rounded.iloc[:, :2]\n",
     "\n",
     "    # Select the rest of the columns where the rows have different values\n",
